Location Manager implements gRPC endpoints to add/edit/delete
+ fix some sonar
+ replace integration test with cucumber for MonitoringLocation
+ increase DEADLINE for Integration Test to avoid timeout

HS-1517