@@ -1,16 +1,14 @@
 package org.opennms.horizon.inventory.service;
 
-import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
-
+import lombok.RequiredArgsConstructor;
 import org.opennms.horizon.inventory.dto.MonitoringLocationDTO;
 import org.opennms.horizon.inventory.mapper.MonitoringLocationMapper;
 import org.opennms.horizon.inventory.model.MonitoringLocation;
 import org.opennms.horizon.inventory.repository.MonitoringLocationRepository;
 import org.springframework.stereotype.Service;
 
-import lombok.RequiredArgsConstructor;
+import java.util.List;
+import java.util.Optional;
 
 @Service
 @RequiredArgsConstructor
@@ -24,7 +22,7 @@ public class MonitoringLocationService {
         return all
             .stream()
             .map(mapper::modelToDTO)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     public Optional<MonitoringLocationDTO> findByLocationAndTenantId(String location, String tenantId) {
@@ -36,7 +34,7 @@ public class MonitoringLocationService {
     }
 
     public List<MonitoringLocationDTO> findByLocationIds(List<Long> ids) {
-        return modelRepo.findByIdIn(ids).stream().map(mapper::modelToDTO).collect(Collectors.toList());
+        return modelRepo.findByIdIn(ids).stream().map(mapper::modelToDTO).toList();
     }
 
     public List<MonitoringLocationDTO> findAll() {
@@ -44,11 +42,20 @@ public class MonitoringLocationService {
         return all
             .stream()
             .map(mapper::modelToDTO)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     public List<MonitoringLocationDTO> searchLocationsByTenantId(String location, String tenantId) {
         return modelRepo.findByLocationContainingIgnoreCaseAndTenantId(location, tenantId)
             .stream().map(mapper::modelToDTO).toList();
+    }
+
+    public MonitoringLocationDTO upsert(MonitoringLocationDTO dto) {
+        MonitoringLocation model = mapper.dtoToModel(dto);
+        return mapper.modelToDTO(modelRepo.save(model));
+    }
+
+    public void delete(Long id, String tenantId) {
+        modelRepo.findByIdAndTenantId(id, tenantId).ifPresent(modelRepo::delete);
     }
 }
